--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: true
 language: python
 python:
   - "2.7"
@@ -13,18 +14,29 @@ python:
 matrix:
   include:
     - python: 2.7
-      env: JYTHON=org.python:jython-installer:2.5.3
+      env: JYTHON=https://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.7.2rc1/jython-installer-2.7.2rc1.jar
 
 before_install:
-  - if [ -n "$JYTHON" ]; then ./before_install_jython.sh; source $HOME/myvirtualenv/bin/activate ;fi
-  - if [ -n "$JYTHON" ]; then pip install jip==0.7; fi
-  - if [ -n "$JYTHON" ]; then jip install joda-time:joda-time:2.3; fi
-  - if [ -n "$JYTHON" ]; then export CLASSPATH=$VIRTUAL_ENV/javalib/*; fi
-  - python --version
-  - pip install -U pip
-  - pip install -U pytest
-script: 
-  - pytest
+  - if [ -z "$JYTHON" ]; then pip install -U pip; fi
+  - if [ -z "$JYTHON" ]; then pip install -U pytest; fi
+  - if [ -z "$JYTHON" ]; then echo '#!/bin/bash' >> /usr/local/bin/testrunner; fi
+  - if [ -z "$JYTHON" ]; then echo "pytest" >> /usr/local/bin/testrunner; fi
+  - if [ -n "$JYTHON" ]; then sudo apt-get update && sudo apt-get install curl wget -y; fi
+  - if [ -n "$JYTHON" ]; then echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu xenial main" | tee /tmp/linuxuprising-java.list; fi
+  - if [ -n "$JYTHON" ]; then sudo cp /tmp/linuxuprising-java.list /etc/apt/sources.list.d/; fi
+  - if [ -n "$JYTHON" ]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 73C3DB2A 40976EAF437D05B5 3B4FE6ACC0B21F32 EA8CACC073C3DB2A; fi
+  - if [ -n "$JYTHON" ]; then sudo apt-get update; fi
+  - if [ -n "$JYTHON" ]; then yes | sudo apt-get install oracle-java13-installer -y --allow-unauthenticated; fi
+  - if [ -n "$JYTHON" ]; then curl -L -o jython-installer.jar $JYTHON; fi
+  - if [ -n "$JYTHON" ]; then java -jar ./jython-installer.jar -s -d /opt/jython -t standard; fi
+  - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/jython -m ensurepip; fi
+  - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/pip install -U pip; fi
+  - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/pip install -U pytest; fi
+  - if [ -n "$JYTHON" ]; then echo '#!/bin/bash' >> /usr/local/bin/testrunner; fi
+  - if [ -n "$JYTHON" ]; then echo "/opt/jython/bin/pytest" >> /usr/local/bin/testrunner; fi
+  - chmod +x /usr/local/bin/testrunner
+script:
+  - runner
 
 jobs:
   allow_failures:
