--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ matrix:
 before_install:
   - if [ -z "$JYTHON" ]; then pip install -U pip; fi
   - if [ -z "$JYTHON" ]; then pip install -U pytest; fi
-  - if [ -z "$JYTHON" ]; then echo '#!/bin/bash' >> /usr/local/bin/testrunner; fi
-  - if [ -z "$JYTHON" ]; then echo "pytest" >> /usr/local/bin/testrunner; fi
+  - if [ -z "$JYTHON" ]; then echo '#!/bin/bash' >> /tmp/testrunner; fi
+  - if [ -z "$JYTHON" ]; then echo "pytest" >> /tmp/testrunner; fi
   - if [ -n "$JYTHON" ]; then sudo apt-get update && sudo apt-get install curl wget -y; fi
   - if [ -n "$JYTHON" ]; then echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu xenial main" | tee /tmp/linuxuprising-java.list; fi
   - if [ -n "$JYTHON" ]; then sudo cp /tmp/linuxuprising-java.list /etc/apt/sources.list.d/; fi
@@ -32,11 +32,12 @@ before_install:
   - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/jython -m ensurepip; fi
   - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/pip install -U pip; fi
   - if [ -n "$JYTHON" ]; then sudo /opt/jython/bin/pip install -U pytest; fi
-  - if [ -n "$JYTHON" ]; then echo '#!/bin/bash' >> /usr/local/bin/testrunner; fi
-  - if [ -n "$JYTHON" ]; then echo "/opt/jython/bin/pytest" >> /usr/local/bin/testrunner; fi
-  - chmod +x /usr/local/bin/testrunner
+  - if [ -n "$JYTHON" ]; then echo '#!/bin/bash' >> /tmp/testrunner ; fi
+  - if [ -n "$JYTHON" ]; then echo "/opt/jython/bin/pytest" >> /tmp/testrunner; fi
+  - chmod +x /tmp/testrunner
+  - sudo cp /tmp/testrunner /usr/local/bin/
 script:
-  - runner
+  - testrunner
 
 jobs:
   allow_failures:
