--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,13 @@ before_install:
   - if [ -z "$JYTHON" ]; then pip install -U pytest; fi
   - if [ -z "$JYTHON" ]; then echo '#!/bin/bash' >> /tmp/testrunner; fi
   - if [ -z "$JYTHON" ]; then echo "pytest" >> /tmp/testrunner; fi
-  - if [ -n "$JYTHON" ]; then sudo apt-get update && sudo apt-get install curl wget -y; fi
+  - if [ -n "$JYTHON" ]; then sudo apt-get update && sudo apt-get install bash curl wget -y; fi
   - if [ -n "$JYTHON" ]; then echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu xenial main" | tee /tmp/linuxuprising-java.list; fi
   - if [ -n "$JYTHON" ]; then sudo cp /tmp/linuxuprising-java.list /etc/apt/sources.list.d/; fi
   - if [ -n "$JYTHON" ]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 73C3DB2A 40976EAF437D05B5 3B4FE6ACC0B21F32 EA8CACC073C3DB2A; fi
   - if [ -n "$JYTHON" ]; then sudo apt-get update; fi
-  - if [ -n "$JYTHON" ]; then echo debconf shared/accepted-oracle-license-v1-2 seen true > /tmp/lic_accpt; fi
-  - if [ -n "$JYTHON" ]; then echo debconf shared/accepted-oracle-license-v1-2 select true >> /tmp/lic_accpt; fi
-  - if [ -n "$JYTHON" ]; then sudo debconf-set-selections /tmp/lic_accpt; fi
+  - if [ -n "$JYTHON" ]; then sudo bash -c 'echo debconf shared/accepted-oracle-license-v1-2 seen true | debconf-set-selections'; fi
+  - if [ -n "$JYTHON" ]; then sudo bash -c 'echo debconf shared/accepted-oracle-license-v1-2 select true | debconf-set-selections'; fi
   - if [ -n "$JYTHON" ]; then sudo apt-get install oracle-java13-installer -y --allow-unauthenticated; fi
   - if [ -n "$JYTHON" ]; then curl -L -o jython-installer.jar $JYTHON; fi
   - if [ -n "$JYTHON" ]; then java -jar ./jython-installer.jar -s -d /opt/jython -t standard; fi
