Fix kwargs processing. Update python versions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,15 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
+  - "3.10"
+  - "3.11"
   - "pypy"
   - "pypy3.5"
+  - "pypy3.6"
+  - "pypy3.7"
+  - "pypy3.8"
+  - "pypy3.9"
   - "pypy3"
   - "nightly"
 
