--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint pytest
+        pip install pylint pytest
+    - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
