--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        python -m pip install pytest
     - name: Analysing the code with pylint
       run: |
-        pytest $(git ls-files 'test*.py')
+        python -m pytest $(git ls-files 'test*.py')
