--- a/.github/workflows/test_pypy.yml
+++ b/.github/workflows/test_pypy.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up pypy ${{ matrix.pypypy }}
-      uses: ./
+      uses: actions/setup-pypy@v3
       with:
         python-version: ${{ matrix.pypy }}
 
