--- a/.github/workflows/test_pypy.yml
+++ b/.github/workflows/test_pypy.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-20.04]
-        pypy: ["pypy-2.7", "pypy-3.7", "pypy-3.8", "pypy-3.9"]
+        pypy: ["pypy-2.7", "pypy-3.5", "pypy-3.6", "pypy-3.7", "pypy-3.8", "pypy-3.9"]
     steps:
     - uses: actions/checkout@v3
 
